fix: delete scroll on mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,21 @@
   --second-gray: #5e5d5d;
 }
 
-.root {
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body.dark-theme {
+  background: var(--second-gray);
+}
+
+#root {
   width: 100%;
   height: 100%;
 }
